fix links and overflow visibi\liy

--- a/css/index.scss
+++ b/css/index.scss
@@ -5,7 +5,7 @@
   margin: 0px;
   padding: 0px;
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  //overflow-x: hidden;
 }
 body {
   overflow-x: hidden;
@@ -144,7 +144,7 @@ body .header {
   position: relative;
   height: 70px;
   text-transform: capitalize;
-  overflow: hidden;
+  //overflow: hidden;
   @include media("mobile") {
     display: block;
     height: auto;
